Fixed white space validations

--- a/react-app/src/components/questions/AddQuestionForm.css
+++ b/react-app/src/components/questions/AddQuestionForm.css
@@ -73,3 +73,13 @@
 .questionTextbox {
     resize: none;
 }
+
+#charLimitsOutDiv {
+    display: flex;
+    justify-content: flex-end;
+}
+
+#charLimits {
+    font-weight: bold;
+    font-size: 13px;
+}
